# src/main/resources/swagger/api.yml
@@ -11,6 +11,7 @@ info:
     name: Michael Pollente
     email: pollentem@gmail.com
 
+
 servers:
   - url: http://localhost:8191
     description: Development server
@@ -36,8 +37,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
         business:
           $ref: '#/components/schemas/Business'
 
@@ -58,7 +58,7 @@ components:
         location:
           $ref: '#/components/schemas/BusinessLocation'
         priceRange:
-          type: integer
+          type: string
           description: Price bracket of the restaurant (1 being budget friendly and 4 being the most expensive)
         userRating:
           type: number
@@ -71,16 +71,11 @@ components:
       type: object
       description: Restaurant location details
       properties:
-        id:
-          type: integer
-          format: int64
         latitude:
-          type: number
-          format: double
+          type: string
           description: The latitude of the business
         longitude:
-          type: number
-          format: double
+          type: string
           description: The longitude of the business
         address:
           type: string
@@ -120,7 +115,7 @@ components:
           type: integer
           description: Number of reviews for this business
         priceRange:
-          type: integer
+          type: string
           description: Price bracket of the restaurant (1 being budget friendly and 4 being the most expensive)
         hasOnlineDelivery:
           type: boolean
@@ -143,29 +138,27 @@ components:
           items:
             type: string
           description: URLs of the photos of the business
-    BusinessReviews:
-      type: array
-      items:
-        type: object
-        properties:
-          id:
-            type: string
-          rating:
-            type: number
-            format: float
-            description: Rating of the review
-          reviewText:
-            type: string
-            description: Text excerpt of the review
-          reviewTime:
-            type: string
-            description: The time that the review was created
-          url:
-            type: string
-            description: URL of the review
-          reviewer:
-            type: string
-            description: Name of the reviewer
+    BusinessReview:
+      type: object
+      properties:
+        id:
+          type: string
+        rating:
+          type: number
+          format: float
+          description: Rating of the review
+        reviewText:
+          type: string
+          description: Text excerpt of the review
+        reviewTime:
+          type: string
+          description: The time that the review was created
+        url:
+          type: string
+          description: URL of the review
+        reviewer:
+          type: string
+          description: Name of the reviewer
     BusinessHours:
       type: object
       properties:
@@ -361,7 +354,7 @@ paths:
                        zipCode: "1111",
                        country: "PH"
                      },
-                     priceRange: 1,
+                     priceRange: "P",
                      userRating: 4.5,
                      reviewCount: 4
                    }
@@ -450,7 +443,7 @@ paths:
                       zipCode: "1111",
                       country: "PH"
                     },
-                    priceRange: 1,
+                    priceRange: "1",
                     userRating: 4.5,
                     reviewCount: 4
                   }
@@ -487,7 +480,7 @@ paths:
                   },
                   phone: "123-12345",
                   reviewCount: 4,
-                  priceRange: 1,
+                  priceRange: "P",
                   hasOnlineDelivery: false,
                   hasPickupService: false,
                   hasTableBooking: false,
@@ -530,7 +523,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BusinessReviews'
+                type: array
+                items:
+                  $ref: '#/components/schemas/BusinessReview'
               example:
                 {
                   id: "0001",
